# os-kernel-museum

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
00-bootstrapping/: README.md
00-bootstrapping/bcompiler/: bcc  bcc-output  hex2a  hex2a-output  hex2c  hex3a  hex3b  hex4a  hex4b  hex5a  hex5b  hex5c
01-kairos-v1/: README.md
01-kairos-v1/hobby-kairos-os/: .gitignore  Makefile
01-kairos-v1/hobby-kairos-os/kairos_libc/libc/: CMakeLists.txt
01-kairos-v1/hobby-kairos-os/kairos_libc/libc/include/: __struct_stat.h  __struct_timespec.h  crypt.h  ctype.h  dlfcn.h  elf.h  errno.h  inttypes.h  link.h  malloc.h  printf.h  pthread.h  stdint.h  stdio.h  stdlib.h  string.h  thread.h  time.h  unistd.h
01-kairos-v1/hobby-kairos-os/kairos_libc/libc/include/_types/: __typedef_blkcnt_t.h  __typedef_dev_t.h  __typedef_gid_t.h  __typedef_int16_t.h  __typedef_int32_t.h  __typedef_int64_t.h  __typedef_int8_t.h  __typedef_intmax_t.h  __typedef_intptr_t.h  __typedef_off_t.h  __typedef_ptrdiff_t.h  __typedef_size_t.h  __typedef_suseconds_t.h  __typedef_uid_t.h  __typedef_uint16_t.h  __typedef_uint32_t.h  __typedef_uint64_t.h  __typedef_uint8_t.h  __typedef_uintmax_t.h  __typedef_uintptr_t.h
01-kairos-v1/hobby-kairos-os/kairos_libc/libc/include/sys/: cdefs.h  syscall.h  types.h
01-kairos-v1/hobby-kairos-os/kairos_libc/libc/src/fs/: fs.c  fs.h
02-kairos-v2/: .gitignore  .gitmodules  README.md
02-kairos-v2/docs/: Compile Clang.md  (+4 more)
03-astraea/: README.md
04-voleta/: README.md
06-ismena/: README.md
crt/: crtn.S
docs/: blog-series-kernel-museum.md  lineage.md
(+762 files in other folders)
